tests/failure/not_ident.stderr
error: expected an ident
  --> $DIR/not_ident.rs:17:18
   |
17 |     fn op(&self, _: &B) -> i32 {
   |                  ^
